# Query-to-Visualization

./: .env.example  .gitignore  CLINICALTRIALS_API_INVESTIGATION.md  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
app/: agent.py  api.py  config.py  ct_client.py  logging_config.py  main.py  models.py  tools.py  viz_selector.py
app/agent/: __init__.py  loop.py  registry.py  tool_schemas.py
app/clinicaltrials/: __init__.py  client.py  extractors.py  filters.py
app/llm/: __init__.py  provider.py
app/prompts/: __init__.py  system.md
app/static/: app.js  index.html
app/tools/: __init__.py  aggregate.py  counts.py  finalize.py  network.py  scatter.py  search.py  store.py
app/viz/: __init__.py  selector.py
examples/: 01_time_series.json  02_bar_chart.json  03_geographic.json  04_network_graph.json  05_histogram.json  06_scatter.json  06_sponsor_class.json  07_comparison_grouped_bar.json  08_scatter.json
tests/: conftest.py  run_examples.py  test_aggregate.py  test_client_retry.py  test_comparison.py  test_extractors.py  test_filters.py  test_network.py  test_notice.py  test_scatter.py  test_selector.py
